--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
       select.add(option);
     }
   }
+
+  function loadRecipes() {
+    fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
+    .then(response => response.json())
+    .then(data => {
+        console.log(data);
+    })
+    .catch(error => {
+      console.error('Error fetching data:', error);
+    });
+  }
 </script>
 
 </body>
