--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
 <script>
   function loadRecipes() {
     fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
-    .then(response => response.json())
-    .then(data => {
-        console.log(data);
-    })
-    .catch(error => {
-      console.error('Error fetching data:', error);
-    });
+    .then(response => console.log(response))
   }
 
   window.onload = loadRecipes;
