--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script>
   function loadRecipes() {
     fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
-    .then(response => console.log(response))
+    .then(response => console.log(response.json()))
   }
 
   window.onload = loadRecipes;
