--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <script>
   function loadRecipes() {
     fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
-    .then(response => console.log(response.json()))
+    .then(response => response.json())
+    .then(data => {
+      console.log(data);
+    });
   }
 
   window.onload = loadRecipes;
