--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <h2>Dynamic Dropdown</h2>
 
 <!-- Dropdown -->
-<select id="fruitDropdown">
-  <option value="apple">Apple</option>
-  <option value="orange">Orange</option>
+<select id="recipeDropdown">
 </select>
 
 <button onclick="addNewItem()">Add Item</button>
@@ -20,7 +18,12 @@
     fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
     .then(response => response.json())
     .then(data => {
-      console.log(data);
+      const recipeList = document.getElementById('recipeDropdown');
+      data.array.forEach(element => {
+        const listItem = document.createElement('li');
+        listItem.textContent = `${element}`;
+        recipeList.appendChild(listItem);
+      });
     });
   }
 
