--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .then(response => response.json())
     .then(data => {
       const recipeList = document.getElementById('recipeDropdown');
-      data.array.forEach(element => {
+      data.forEach(element => {
         console.log(element);
         const listItem = document.createElement('li');
         listItem.textContent = `${element}`;
