--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     .then(response => response.json())
     .then(data => {
       const recipeList = document.getElementById('recipeDropdown');
-      data.forEach(element => {
+      var keys = Object.keys(data);
+      keys.forEach(element => {
         console.log(element);
         const listItem = document.createElement('li');
         listItem.textContent = `${element}`;
