added a button and text input

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dynamic Dropdown Example</title>
+  <title>New World Crafting Breakdown</title>
 </head>
 <body>
 
@@ -10,8 +10,13 @@
 <!-- Dropdown -->
 <select id="recipeDropdown">
 </select>
-
+<input type="text" id="textBox" placeholder="Enter text here">
+><button onclick=""></button>
 <script>
+  function calculateBreakdown() {
+    console.log("b");
+  }
+
   function loadRecipes() {
     fetch('https://raw.githubusercontent.com/sirref/nwcb/main/recipes.json')
     .then(response => response.json())
