fixed button text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <select id="recipeDropdown">
 </select>
 <input type="text" id="textBox" placeholder="Enter text here">
-><button onclick=""></button>
+<button onclick="">Breakdown</button>
 <script>
   function calculateBreakdown() {
     console.log("b");
