changed placeholder text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Dropdown -->
 <select id="recipeDropdown">
 </select>
-<input type="text" id="textBox" placeholder="Enter text here">
+<input type="text" id="textBox" placeholder="Number of crafts">
 <button onclick="">Breakdown</button>
 <script>
   function calculateBreakdown() {
