added function to button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <select id="recipeDropdown">
 </select>
 <input type="text" id="textBox" placeholder="Number of crafts">
-<button onclick="">Breakdown</button>
+<button onclick="calculateBreakdown()">Breakdown</button>
 <script>
   function calculateBreakdown() {
     console.log("b");
